# Real-Time-System-Dashboard

./: .gitignore  CMakeLists.txt  README.md
config/: dashboard.json
python/: analyze_metrics.py  data_generator.py
resources/shaders/: bar.frag  line.frag  line.vert
src/: main.cpp
src/app/: dashboard.cpp  dashboard.h  settings_dialog.cpp  settings_dialog.h
src/data/: data_buffer.h  metrics.h  system_data_collector.cpp  system_data_collector.h
src/rendering/: bar_chart.cpp  bar_chart.h  gl_renderer.cpp  gl_renderer.h  line_graph.cpp  line_graph.h
src/widgets/: cpu_monitor.cpp  cpu_monitor.h  gl_chart_widget.cpp  gl_chart_widget.h  memory_monitor.cpp  memory_monitor.h  process_table.cpp  process_table.h
